[package]
name = "starknetid_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "c974e5cb42e8d8344cee910b76005ec46b4dd3ed" }
starknet-id = { git = "https://github.com/starknet-id/starknetid.rs", rev = "2b30c2453b96789a628c86d2edebb1023fa2e77d" }
axum_auto_routes = { git = "https://github.com/Th0rgal/axum_auto_routes.git", rev = "f9e1d2083e887cd264642359c4aa851938da6f09" }
axum = "0.6.18"
futures = "0.3.28"
mongodb = "2.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
toml = "0.7.4"
tower-http = { version = "0.4.0", features = ["cors"] }
chrono = "0.4.24"
reqwest = { version = "0.11.20", features = ["json"] }
ark-ff = "0.4.2"
hex = "0.4.3"
error-stack = "0.4.1"
anyhow = "1.0.75"
lazy_static = "1.4.0"
regex = "1.10.2"
bs58 = "0.5.0"
ed25519-dalek = "2.1.0"
ctor = "0.2.6"
