[package]
name = "starknetid_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "c974e5cb42e8d8344cee910b76005ec46b4dd3ed" }
starknet-id = { git = "https://github.com/starknet-id/starknetid.rs", rev = "2b30c2453b96789a628c86d2edebb1023fa2e77d" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "c974e5cb42e8d8344cee910b76005ec46b4dd3ed", package = "starknet-crypto" }
axum_auto_routes = { git = "https://github.com/Th0rgal/axum_auto_routes.git", rev = "f9e1d2083e887cd264642359c4aa851938da6f09" }
axum = "0.6.20"
futures = "0.3.30"
mongodb = "2.8.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
toml = "0.7.8"
tower-http = { version = "0.4.4", features = ["cors"] }
chrono = "0.4.38"
reqwest = { version = "0.11.27", features = ["json"] }
ark-ff = "0.4.2"
hex = "0.4.3"
error-stack = "0.4.1"
anyhow = "1.0.86"
lazy_static = "1.5.0"
regex = "1.10.6"
bs58 = "0.5.1"
ed25519-dalek = "2.1.1"
ctor = "0.2.8"
base64 = "0.22.1"
solana-sdk = "1.18.23"
bincode = "1.3.3"
ethabi = "18.0.0"
ethers = "2.0.14"
serde_urlencoded = "0.7.1"
bytes = "1.7.1"
crypto-bigint = "0.5.5"
rand = "0.8.5"

# required for solana SDK to work
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
