[package]
edition = "2021"
name = "starknetid_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
ark-ff = "0.4.2"
axum = "0.6.20"
axum_auto_routes = {git = "https://github.com/Th0rgal/axum_auto_routes.git", rev = "f9e1d2083e887cd264642359c4aa851938da6f09"}
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.7.1"
chrono = "0.4.38"
crypto-bigint = "0.5.5"
ctor = "0.2.8"
ed25519-dalek = "2.1.1"
env_logger = "0.10.0"
error-stack = "0.4.1"
ethabi = "18.0.0"
ethers = "2.0.14"
futures = "0.3.30"
hex = "0.4.3"
lazy_static = "1.5.0"
mongodb = "2.8.2"
rand = "0.8.5"
regex = "1.10.6"
reqwest = {version = "0.11.27", features = ["json"]}
serde = {version = "1.0.209", features = ["derive"]}
serde_derive = "1.0.183"
serde_json = "1.0.127"
serde_urlencoded = "0.7.1"
solana-sdk = "1.18.23"
starknet = {git = "https://github.com/xJonathanLEI/starknet-rs", rev = "c974e5cb42e8d8344cee910b76005ec46b4dd3ed"}
starknet-crypto = {git = "https://github.com/xJonathanLEI/starknet-rs", rev = "c974e5cb42e8d8344cee910b76005ec46b4dd3ed", package = "starknet-crypto"}
starknet-id = {git = "https://github.com/starknet-id/starknetid.rs", rev = "2b30c2453b96789a628c86d2edebb1023fa2e77d"}
tokio = {version = "1.40.0", features = ["macros", "rt-multi-thread"]}
toml = "0.7.8"
tower-http = {version = "0.4.4", features = ["cors"]}

# required for solana SDK to work
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
